Fix spacing on the 'review and approval' heading

--- a/app/assets/stylesheets/hyrax/_work-show.scss
+++ b/app/assets/stylesheets/hyrax/_work-show.scss
@@ -116,6 +116,11 @@ ul.tabular {
   background: #fff;
   border-color: #e0e0e0;
 
+  & > .btn {
+    padding: 0;
+    border: 0;
+  }
+
   .card-header {
     background-color: #e6ab5f;
     color: #ffffff;
